[package]
edition = "2021"
name = "procon-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = {version = "4.0", features = ["derive"]}
reqwest = "0.11"
scraper = "0.16.0"
tokio = {version = "1", features = ["full"]}
